Added front page w/ search button

--- a/index.html
+++ b/index.html
@@ -2,23 +2,31 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="">
         <title>Weather Dashboard</title>
         <link rel="stylesheet" href="./assets/css/style.css">
     </head>
     
     <body>
-      <header>
+        <div id="header"></div>
+        <header>
+            <h1>Weather Dashboard</h1>
+        </header>
 
-      </header>
+        
+        <form>
+          <h2>Search for a City:</h2>
+          <input type="search" name="search" placeholder="Search" id="search" />
+          <input type="submit" value="Search" id="button" />
+        </form>
 
-      <main>
+        <aside></aside>
 
-      </main>
+        <main></main>
 
-      <footer>
 
-      </footer>
-      <script src="./assets/js/index.js"></script>
+        <footer>
+            <p>API provided by OpenWeather</p>
+        </footer>
+        <script src="./assets/js/index.js"></script>
     </body>
 </html>
