Successfully able to pull in city data from API Key

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <form>
           <h2>Search for a City:</h2>
           <input type="search" name="search" placeholder="Search" id="search" />
-          <input type="submit" value="Search" id="button" />
+          <button type="submit" id="city-search">Search</button>
         </form>
 
         <aside></aside>
