--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </main>
 
         <footer>
-            <p>API provided by OpenWeather</p>
+            <p>API provided by OpenWeatherMap</p>
         </footer>
       <script src="./assets/js/index.js"></script>
     </body>
