--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     
     <body>
-      <div id="header"></div>
+      <nav id="header"></nav>
         <header>
           <h1 id="title">Weather Dashboard</h1>
         </header>
@@ -22,6 +22,7 @@
           <aside></aside>
 
           <section id="result"></section>
+          <section id="card"></section>
         </main>
 
         <footer>
