Added styling fixes

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <button type="submit" id="city-search">Search</button>
           </form>
           
-          <aside></aside>
+          <!-- <aside></aside> -->
 
-          <section id="result"></section>
+          <section id="results"></section>
           <section id="card"></section>
         </main>
 
